2012-01-27  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/storage.go: fixes in storage loading.

2012-01-25  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/storage.go: switched to persival, get rid of kyoto cabinet
	* webrocket/vhost.go: storage adjustments
	* webrocket/context.go: storage adjustments
	* webrocket/channel.go: storage adjustments
	* webrocket/permission.go: storage adjustments

2012-01-24  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/backend_endpoint.go: fixed calls to GenerateSingleAccessToken
	* webrocket/channel.go: respecting uid in confirmations
	* webrocket/permission.go: added uid assigned to permission
	* webrocket/permission_test.go: fixed tests including uid
	* webrocket/subscription.go: added uid of subscribing client
	* webrocket/vhost.go: adjusted calls to NewPermission
	* webrocket/vhost_test.go: fixed tests
	* webrocket/webrocket_integration_test.go: added checking for uid in confirmations
	* webrocket/websocket_connection.go: fixed calls

2012-01-22  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket-server/main.go: locking and storage fixes
	* webrocket/context.go: locking and storage fixes
	* webrocket/channel.go: optimized broadcasting
	* webrocket/vhost.go: added Kill function and direct access to lobby
	* webrocket/backend_endpoint.go: optimized access to vhost's lobby
	* webrocket/backend_connection.go: removed unused timeout

2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>

	* distro/archlinux/rc.d/webrocket: created an init script for arch linux 
	* webrocket/: backend proto fixes and optimization

2012-01-19  Krzysztof Kowalik  <chris@nu7hat.ch>

	* docs/webrocket-server.1.txt: updated docs
	* webrocket/: various fixes
	* webrocket/webrocket_integration_test.go: added integration tests for websocket proto and backend req
	* webrocket-admin/: formatting fixes
	* webrocket-server/: formatting fixes

2012-01-18  Krzysztof Kowalik  <chris@nu7hat.ch>
