@@ -16,27 +16,25 @@
 package main
 
 import (
-	stepper "../gostepper"
 	"../webrocket"
+	stepper "../gostepper"
 	"flag"
 	"fmt"
-	"io"
+	"io/ioutil"
 	"os"
 )
 
 var (
-	Addr       string
-	CookiePath string
-	Cookie     string
-	Cmd        string
-	Params     []string
-	s          stepper.Stepper
+	Addr   string
+	Cookie string
+	Cmd    string
+	Params []string
+	s      stepper.Stepper
 )
 
 func init() {
 	flag.StringVar(&Addr, "admin-addr", "127.0.0.1:8082", "Address of the server's admin interface")
-	flag.StringVar(&CookiePath, "cookie", "/var/lib/webrocket/"+webrocket.DefaultNodeName()+".cookie",
-			"Path to the server's cookie file")
+	flag.StringVar(&Cookie, "cookie", "", "Cookie string generated by the server")
 	flag.Parse()
 
 	Cmd = flag.Arg(0)
@@ -44,7 +42,7 @@ func init() {
 		usage()
 		os.Exit(1)
 	}
-
+	
 	readCookie()
 }
 
@@ -67,18 +65,17 @@ func usage() {
 }
 
 func readCookie() {
-	s.Start("Reading cookie")
-	cookieFile, err := os.Open(CookiePath)
+	if Cookie != "" {
+		return
+	}
+	cookiePath := "/var/lib/webrocket"+webrocket.DefaultNodeName()+".cookie"
+	data, err := ioutil.ReadFile(cookiePath)
 	if err != nil {
-		s.Fail(err.Error(), true)
+		// We not reporting this error here, server will claim
+		// access denied when cookie is wrong!
+		return
 	}
-	var buf [webrocket.CookieSize]byte
-	n, err := io.ReadFull(cookieFile, buf[:])
-	if n != webrocket.CookieSize || err != nil {
-		s.Fail("invalid cookie format", true)
-	}
-	Cookie = string(buf[:])
-	s.Ok()
+	Cookie = string(data)
 }
 
 func main() {
